Fixed css selectors and some layout issues, did some debugging

--- a/client/src/components/chats-list/chats-list.css
+++ b/client/src/components/chats-list/chats-list.css
@@ -1,10 +1,15 @@
-.chat-list{
+.chat-list-wrapper .chat-list{
   padding: 0;
   margin: 10px auto;
   max-width: 300px;
   list-style: none;
 }
-.chat-listing{
+
+.chat-list-wrapper h1 {
+  text-align: center;
+}
+
+.chat-list-wrapper .chat-listing {
   border: 1px solid black;
   border-radius: 4px;
   padding: 3px;
